--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,9 +20,9 @@ body {
     font-size: 60px;
     color: whitesmoke;
     text-align: center;
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
+    -webkit-animation: glow 0.6s ease-in-out infinite alternate;
+    -moz-animation: glow 0.6s ease-in-out infinite alternate;
+    animation: glow 0.6s ease-in-out infinite alternate;
   }
   
   @-webkit-keyframes glow {
@@ -31,6 +31,26 @@ body {
     }
     to {
       text-shadow: 0 0 20px #eb8181, 0 0 30px #ec4646, 0 0 40px #f10202, 0 0 50px #f10202, 0 0 60px rgb(151, 0, 0), 0 0 70px #1a1aff, 0 0 80px #1a1aff;
+    }
+  }
+  /* text-shadow: 0 0 20px #6666ff, 0 0 30px #1a1aff, 0 0 40px #1a1aff, 0 0 50px #1a1aff, 0 0 60px #1a1aff, 0 0 70px #1a1aff, 0 0 80px #1a1aff; */
+
+  /* Reference for glow feature https://www.w3schools.com/howto/howto_css_glowing_text.asp */
+.glow2 {
+    font-size: 60px;
+    color: whitesmoke;
+    text-align: center;
+    -webkit-animation: glow2 0.6s ease-in-out infinite alternate;
+    -moz-animation: glow2 0.6s ease-in-out infinite alternate;
+    animation: glow2 0.6s ease-in-out infinite alternate;
+  }
+  
+  @-webkit-keyframes glow2 {
+    from {
+        text-shadow: 0 0 20px #eb8181, 0 0 30px #ec4646, 0 0 40px #f10202, 0 0 50px #f10202, 0 0 60px rgb(151, 0, 0), 0 0 70px #1a1aff, 0 0 80px #1a1aff;
+    }
+    to {
+      text-shadow: 0 0 10px #13137a, 0 0 20px #1a1aff, 0 0 30px #1a1aff, 0 0 40px #1a1aff, 0 0 50px #80bfff, 0 0 60px #80bfff, 0 0 70px #80bfff;
     }
   }
   /* text-shadow: 0 0 20px #6666ff, 0 0 30px #1a1aff, 0 0 40px #1a1aff, 0 0 50px #1a1aff, 0 0 60px #1a1aff, 0 0 70px #1a1aff, 0 0 80px #1a1aff; */
