adding html code

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,8 @@
 .jumbotron {
     background-image: url("../bars.png");
     background-size: cover;
-    margin: 0
-}
+    margin: 0 */
+/* }
 
 .heading {
     /* margin: 0px; */
