--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,11 @@
 .jumbotron {
-    background-image: url("../bars.png");
+    background-image: url("../images/bars.png");
     background-size: cover;
-    margin: 0 */
-/* }
+    margin: 0 
+}
 
 .heading {
-    /* margin: 0px; */
+    /* margin: 0px;
     width: 100%;
     padding: 0;
 
