--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
 }
 
 .heading {
-    /* margin: 0px;
+    margin: 0px;
     width: 100%;
     padding: 0;
 
@@ -18,7 +18,7 @@ body {
 #footer {
     position: absolute;
     bottom: 5px;
-    width: 100%; /* Set the fixed height of the footer here */
+    width: 100%; 
     height: 10px;
     padding-top: 20px;
     padding-bottom: 40px;
