--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,12 +4,12 @@
     margin: 0 
 }
 
-.heading {
+/* .heading {
     margin: 0px;
     width: 100%;
     padding: 0;
 
-}
+} */
 
 body {
     margin: 0;
