--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap CSS -->
         <!-- Note: The 'superhero' bootswatch theme has been used-->
-        <link href="CSS/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="CSS/style.css" rel="stylesheet" type="text/css">
+        <link href="../static/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="../static/style.css" rel="stylesheet" type="text/css">
 
         <!-- Setting title-->
         <title>Victorian Crime Dashboard</title>
@@ -28,7 +28,7 @@
     </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-1">
             <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="images/police.svg" width="32" height="30" class="d-inline-block align-text-top"> &nbsp VIC Crime </a>
+              <a class="navbar-brand" href="index.html"><img src="../static/images/police.svg" width="32" height="30" class="d-inline-block align-text-top"> &nbsp VIC Crime </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -55,7 +55,10 @@
                     <p> News scraping headline here</p>
                 </div>
                 <div class="col-lg-6" id="user-selection">
-                    <p> user selection options here</p>
+                  <div class="suburb-selection">
+                    <h5>Suburb selection:</h5>
+                    <select id="selDataset" onchange="optionChanged(this.value)"></select>
+                  </div>
                 </div>
             </div>
             <div class="row">
