--- a/templates/data.html
+++ b/templates/data.html
@@ -54,7 +54,7 @@
                 <div class="col-lg-2" id="user-selection">
                   <div class="form-group">
                     <div class="list-group" id="filters">
-                        <input list="myList" type="search" placeholder="Select Suburb">
+                        <input id="suburbSelect" list="myList" type="search" placeholder="Select Suburb">
                         <datalist id="myList"></datalist>
                       </div> 
                     </div>
@@ -62,7 +62,7 @@
                   <div class="col-lg-2" id="user-selection">
                     <div class="form-group">
                       <div class="list-group" id="filters">
-                        <input list="myList2" type="search" placeholder="Select Year">
+                        <input id="yearSelect" list="myList2" type="search" placeholder="Select Year">
                         <datalist id="myList2">
                           <option value="2021">
                           <option value="2020">
@@ -89,7 +89,7 @@
             <div class="row">
             <div class="col-lg-1"></div>
             <div class="col-lg-10">
-              <div id="table-area" class="table-responsive-lg bg-info">
+              <div id="table-area" class="table-responsive-lg bg-light">
                   <table id="ufo-table" class="table table-striped">
                   <thead>
                       <tr>
@@ -107,7 +107,7 @@
             </div>
 
         <div class="bg-primary" id="footer">
-            <p>Monash University Data Analytics Bootcamp 2021 &nbsp &copy;&nbsp Project 2 completed by Amber Van Harskamp, Mathew Johnson & Leanne Porter. </p>
+          <span class="bottom"><p>Monash University Data Analytics Bootcamp 2021 &nbsp &copy;&nbsp Project 2 completed by Amber Van Harskamp, Mathew Johnson & Leanne Porter. </p></span>
           </div>
         <!-- This script is required to get the drop down options to work.--> 
         <!-- <script src="static/js/app.js"></script> -->
