--- a/templates/data.html
+++ b/templates/data.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-lg-2" id="user-selection">
                       <label for="date"></label>
-                      <button id="filter-btn" type="button" class="btn btn-info">Filter Table</button>
+                      <button id="filter-btn" type="btn btn-primary" class="btn btn-info">Filter Table</button>
                     </div>
                 </div>
             </div>
@@ -105,14 +105,16 @@
               </div>
               </div>
             </div>
-
+            <p></p> 
+            <p></p>
+            <p></p>
         <div class="bg-primary" id="footer">
           <span class="bottom"><p>Monash University Data Analytics Bootcamp 2021 &nbsp &copy;&nbsp Project 2 completed by Amber Van Harskamp, Mathew Johnson & Leanne Porter. </p></span>
           </div>
         <!-- This script is required to get the drop down options to work.--> 
         <!-- <script src="static/js/app.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-        
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <script src="./static/js/data-app.js"></script>
