--- a/templates/data.html
+++ b/templates/data.html
@@ -51,6 +51,8 @@
                 </div>
             </div>
             <div class="row">
+              <div class="col-lg-1"></div>
+              <div class="col-lg-2"></div>
                 <div class="col-lg-2" id="user-selection">
                   <div class="form-group">
                     <div class="list-group" id="filters">
@@ -80,7 +82,7 @@
                     </div>
                     <div class="col-lg-2" id="user-selection">
                       <label for="date"></label>
-                      <button id="filter-btn" type="btn btn-primary" class="btn btn-info">Filter Table</button>
+                      <button id="filter-btn" type="btn btn-secondary" class="btn btn-info btn-sm">Filter Table</button>
                     </div>
                 </div>
             </div>
