--- a/templates/data.html
+++ b/templates/data.html
@@ -91,10 +91,10 @@
             <div class="row">
             <div class="col-lg-1"></div>
             <div class="col-lg-10">
-              <div id="table-area" class="table-responsive-lg bg-light">
-                  <table id="ufo-table" class="table table-striped">
-                  <thead>
-                      <tr>
+              <div id="table-area" class="table-responsive-lg">
+                  <table id="ufo-table" class="table table-bordered table-hover">
+                  <thead class="thead-dark">
+                      <tr class="table-active">
                       <th class="table-head">Year</th>
                       <th class="table-head">Suburb</th>
                       <th class="table-head">Offence Division</th>
