--- a/static/style.css
+++ b/static/style.css
@@ -15,35 +15,87 @@ body {
     margin: 0;
 }
 
-#footer {
+/* #footer {
     position: fixed;
+    margin: 0px;
     bottom: 0px;
-    width: 100%; 
+    width: 100% !important; 
     text-align: center;
     color: white;
     height: 25px;
   }
-  
+   */
+
+#footer {
+    clear: both;
+    position: relative;
+    height: 25px;
+    width: 100% !important; 
+    text-align: center;
+    color: white;
+    margin:0px
+}
+
+
 #footer p {
     margin: 0;
     font-size: 14px;
   }
 
-#myChart {
-  width: 700px;
-  height: 700px;
-  }
+#chartReport {
+  width: 600px;
+  height: 400px;
 
-#user-selection {
+}
+
+.legend {
+  padding: 6px 8px;
+  font-weight: bold;
+  color: black;
+  background: #fff;
+  border-radius: 5px;
+  text-align: center;
+
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+div.info.legend.leaflet-control br { clear: both; } 
+
+
+/* #user-selection {
   background-color:rgba(76, 91, 221, 0.363);
   border-color: black;
   border-radius: 4px;
 
-}
+} */
 
 #user-selection h5{
   color:black;
 }
+
+
+#map
+{ height: 350px; 
+  width: 1000px;
+  position: relative;
+}
+
+body > div.map-container {
+    position: fixed;
+    top: calc(50px + 1em);
+    bottom: calc(50px + 1em);
+    right: 0;
+    left: 0;
+    vertical-align: top;
+}
+
 
 /* Reference for glow feature https://www.w3schools.com/howto/howto_css_glowing_text.asp */
 .glow {
