--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap CSS -->
         <!-- Note: The 'superhero' bootswatch theme has been used-->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+        integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+        crossorigin=""/>
         <link href="../static/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="../static/style.css" rel="stylesheet" type="text/css">
+        
+
 
         <!-- Setting title-->
         <title>Victorian Crime Dashboard</title>
@@ -67,32 +72,46 @@
                 <hr>
             </div>
             <div class="row">
-                <div class="col-lg-6" id="news-scraping">
-                    <p> bar graph 1 here </p>
-                </div>
-                <div class="col-lg-6">
-                    <p> another  graph here</p>
-                </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12" id="chartReport">
+              <div class="col-lg-8" id="chartReport">
                <canvas id="myChart"></canvas>
                 </div>
             </div>
-            </div>
+            <hr>
+      
+            <div class="row">
+              <div class="col-lg-1" ></div>
+              <div class="col-lg-10" id="map">
+                
+                </div>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
 
-        </div>
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
+            </div>
+           </div>
+        
 
         <div class="bg-primary" id="footer">
             <p>Monash University Data Analytics Bootcamp 2021 &nbsp &copy;&nbsp Project 2 completed by Amber Van Harskamp, Mathew Johnson & Leanne Porter. </p>
           </div>
         <!-- This script is required to get the drop down options to work.--> 
-        <!-- <script src="static/js/app.js"></script> -->
+        <!-- Leaflet JS -->
+        <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+        integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+        crossorigin=""></script>
+    
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-        
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <script src="./static/js/app.js"></script>
+        <script type="text/javascript" src="./static/js/leaflet.js"></script>
+        <!-- <script type="text/javascript" src="./static/js/clustermap.js"></script> -->
+        <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js"></script>
+        <script type="text/javascript" src="./static/js/leaflet-heat.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     </body>
