--- a/templates/index.html
+++ b/templates/index.html
@@ -56,28 +56,34 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-12" id="news-scraping">
+                    <p> News scraping headline here</p>
+                </div>
+              </div>
+              <hr>
+            <div class="row">
               <div class="col-lg-4" id="user-selection">
                 <h5>Select suburb to explore the dataset:</h5>
                 <div class="suburb-selection">
                     <select id="selDataset" onchange="optionChanged(this.value)">
-                      <option value="" disabled selected>Select Suburb</option></select>
+                      <option >Melbourne</option></select>
                     </div>
                     <p></p>
-                </div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-6" id="news-scraping">
-                    <p> News scraping headline here</p>
                 </div>
                 <p></p>
                 <hr>
             </div>
             <div class="row">
-              <div class="col-lg-8" id="chartReport">
+              <div class="col-lg-7" id="chartReport">
                <canvas id="myChart"></canvas>
                 </div>
-            </div>
+                <div class="col-sm-1">
+                   </div>
+              <div class="col-lg-5" id="chartReport2">
+               <canvas id="myChart2"></canvas>
+                </div>
             <hr>
-      
+          </div>
             <div class="row">
               <div class="col-lg-1" ></div>
               <div class="col-lg-10" id="map">
@@ -93,11 +99,16 @@
               </div>
             </div>
            </div>
-        
 
-        <div class="bg-primary" id="footer">
+
+        <div class="container-fluid">
+        <div class="row">
+        <footer id="footer">
             <p>Monash University Data Analytics Bootcamp 2021 &nbsp &copy;&nbsp Project 2 completed by Amber Van Harskamp, Mathew Johnson & Leanne Porter. </p>
-          </div>
+          </footer>
+        </div>
+      </div>
+
         <!-- This script is required to get the drop down options to work.--> 
         <!-- Leaflet JS -->
         <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
