--- a/static/style.css
+++ b/static/style.css
@@ -112,9 +112,9 @@ body > div.map-container {
     font-size: 60px;
     color: whitesmoke;
     text-align: center;
-    -webkit-animation: glow 0.7s ease-in-out infinite alternate;
-    -moz-animation: glow 0.7s ease-in-out infinite alternate;
-    animation: glow 0.7s ease-in-out infinite alternate;
+    -webkit-animation: glow 0.6s ease-in-out infinite alternate;
+    -moz-animation: glow 0.6s ease-in-out infinite alternate;
+    animation: glow 0.6s ease-in-out infinite alternate;
   }
   
   @-webkit-keyframes glow {
@@ -145,4 +145,54 @@ body > div.map-container {
       text-shadow: 0 0 10px #13137a, 0 0 20px #1a1aff, 0 0 30px #1a1aff, 0 0 40px #1a1aff, 0 0 50px #80bfff, 0 0 60px #80bfff, 0 0 70px #80bfff;
     }
   }
-  /* text-shadow: 0 0 20px #6666ff, 0 0 30px #1a1aff, 0 0 40px #1a1aff, 0 0 50px #1a1aff, 0 0 60px #1a1aff, 0 0 70px #1a1aff, 0 0 80px #1a1aff; */
+
+  @import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+  /* .glyphicon-remove{
+      padding: 3px 0px 0px 0px;
+      color: #fff;
+      background-color: #000;
+      height: 25px;
+      width: 25px;
+      border-radius: 15px;
+      border: 2px solid #fff;
+  }
+  
+  .scroll-text{
+      color: #000;
+  }
+
+  .img { object-fit: contain; }
+   */
+
+.mt-5 {
+  margin:0 !important;
+}
+  
+.news {
+    width: 160px;
+    /* background-color: navy !important; */
+    border-color:red !important;
+}
+
+.news-scroll a {
+    text-decoration: none;
+    color:red;
+}
+
+.breaking-news {
+  background-color:#b3d1ff;
+}
+
+.dot {
+    height: 6px;
+    width: 6px;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-top: 2px !important;
+    background-color: navy;
+    border-radius: 50%;
+    border-color:red;
+    display: inline-block
+}
+  
