--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
         integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
         crossorigin=""/>
+        <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+        <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+
         <link href="../static/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="../static/style.css" rel="stylesheet" type="text/css">
         
@@ -62,7 +65,6 @@
                 </div>
             </div>
           </div> 
-            <br>
             <br>
               <hr>
             <div class="row">
@@ -124,9 +126,6 @@
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <script src="./static/js/app.js"></script>
         <script type="text/javascript" src="./static/js/leaflet.js"></script>
-        <!-- <script type="text/javascript" src="./static/js/clustermap.js"></script> -->
-        <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js"></script>
-        <script type="text/javascript" src="./static/js/leaflet-heat.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     </body>
