--- a/templates/index.html
+++ b/templates/index.html
@@ -69,22 +69,22 @@
               <hr>
             <div class="row">
               <div class="col-sm-1"></div>
-                  <div class="col-sm-3" id="user-selection">
+                  <div class="col-sm-2" id="user-selection">
                     <div class="card card1">
                       <div class="card-body">
-                        <p></p>
-                        <h5>Select suburb to explore the dataset:</h5>
-                        <p></p>
+                        <h5><b>Select suburb to explore the dataset:</b></h5>
+                        <hr>
                         <select id="selDataset" onchange="optionChanged(this.value)">
                         <option >Melbourne</option></select>
                       </div>
                     </div>
                   </div>
+                  <div class="col-sm-1"></div>
                 <div class="col-sm-2">
                   <div class="card card3">
                     <div class="card-body">
-                      <h3 class="card-title">2021</h3>
-                      <h5 class="card-title">Total Number of Offences:</h5>
+                      <h3 class="card-title"><b>2021</b></h3>
+                      <h5 class="card-title"><b>Total Number of Offences:</b></h5>
                       <h5 class="card-text" id="card2021"></h5>
                     </div>
                   </div>
@@ -92,8 +92,8 @@
                 <div class="col-sm-2">
                   <div class="card card3">
                     <div class="card-body">
-                      <h3 class="card-title">2020</h3>
-                      <h5 class="card-title">Total Number of Offences:</h5>
+                      <h3 class="card-title"><b>2020</b></h3>
+                      <h5 class="card-title"><b>Total Number of Offences:</b></h5>
                       <h5 class="card-text" id="card2020"></h5>
                     </div>
                   </div>
@@ -101,8 +101,8 @@
                 <div class="col-sm-2">
                   <div class="card card2">
                     <div class="card-body">
-                      <h3 class="card-title">2021 vs 2020</h3>
-                      <h5 class="card-title">Total difference:</h5>
+                      <h3 class="card-title"><b>2021 vs 2020</b></h3>
+                      <h5 class="card-title"><b>Total difference:</b></h5>
                       <h5 class="card-text" id="difference"><p></p></h5>
                       <h5 class="card-text" id="difference2"><p></p></h5>
                     </div>
@@ -111,6 +111,7 @@
                 <p></p>
                 <hr>
             </div>
+            <p></p>
             <div class="row">
               <div class="col-lg-7" id="chartReport">
                <canvas id="myChart"></canvas>
@@ -120,6 +121,7 @@
               <div class="col-lg-5" id="chartReport2">
                <canvas id="myChart2"></canvas>
                 </div>
+                <p></p>
             <hr>
           </div>
             <div class="row">
