--- a/templates/index.html
+++ b/templates/index.html
@@ -125,6 +125,8 @@
             <hr>
           </div>
             <div class="row">
+              <h4><b>Map of Victoria: <span class="headingtext"> Offences by suburb </span></b></h4>
+              <p></p>
               <div class="col-lg-1" ></div>
               <div class="col-lg-10" id="map">
                 
