--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ body {
   color: black;
   background: #fff !important;
   border-radius: 5px;
-  text-align: center;
+  text-align: left;
 
 }
 
@@ -46,6 +46,10 @@ body {
   float: left;
   margin-right: 8px;
   opacity: 0.7;
+}
+
+.headingtext {
+  color: #ff0000
 }
 
 div.info.legend.leaflet-control br { clear: both; } 
@@ -61,18 +65,10 @@ div.info.legend.leaflet-control br { clear: both; }
 
 #map
 { height: 350px; 
-  width: 1000px;
+  width: 1100px;
   position: relative;
 }
 
-body > div.map-container {
-    position: fixed;
-    top: calc(50px + 1em);
-    bottom: calc(50px + 1em);
-    right: 0;
-    left: 0;
-    vertical-align: top;
-}
 
 h3 {
   color:#ff0000;
@@ -86,10 +82,15 @@ h5 {
   text-align: center;
 }
 
+h4 {
+  text-align: center;
+  color: navy
+}
+
 .card {
   border-color: navy;
   height: 10rem;
-  background-color: #cce0ff;
+  /* background-color: #cce0ff; */
   border-width: medium;
   
 }
@@ -160,7 +161,8 @@ p {
 .mt-5 {
   margin:0 !important;
 }
-  
+
+
 .news {
     width: 160px;
     /* background-color: navy !important; */
@@ -170,6 +172,7 @@ p {
 .news-scroll a {
     text-decoration: none;
     color:red;
+    font-size: 25px !important;
 }
 
 .breaking-news {
