--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         <!-- Required meta tags -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Bootstrap CSS -->
         <!-- Note: The 'superhero' bootswatch theme has been used-->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
@@ -15,6 +16,7 @@
 
         <link href="../static/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="../static/style.css" rel="stylesheet" type="text/css">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
         
 
 
@@ -43,6 +45,9 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
+                    <a class="nav-link" href="news.html">News</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="data.html">Data</a>
                   </li>
                 </ul>
@@ -59,7 +64,8 @@
                     <div class="col-md-12">
                         <div class="d-flex justify-content-between align-items-center breaking-news bg-white">
                             <div class="d-flex flex-row flex-grow-1 flex-fill justify-content-center py-2 text-white px-1 news"><span class="d-flex align-items-center"><img src="../static/images/news2.png" width="150" height="25" class="d-inline-block align-text-top"></span></div>
-                            <marquee class="news-scroll" behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"> <a href="#">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </a> <span class="dot"></span> <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </a> <span class="dot"></span> <a href="#">Duis aute irure dolor in reprehenderit in voluptate velit esse </a> </marquee>
+                            <marquee class="news-scroll" behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"> {% for headline in news.Headline %} <a>{{ headline }} </a> <span class="dot"></span>{% endfor %} </marquee>
+                            <p class="scrape-button"><a class="btn btn-sm" href="../scrape" role="button"><b>Get Latest Headlines</b></a></p>
                         </div>
                     </div>
                 </div>
