--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="news.html">News</a>
+                    <a class="nav-link" href="../news_tab_scrape">News</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="data.html">Data</a>
@@ -63,7 +63,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="d-flex justify-content-between align-items-center breaking-news bg-white">
-                            <div class="d-flex flex-row flex-grow-1 flex-fill justify-content-center py-2 text-white px-1 news"><span class="d-flex align-items-center"><img src="../static/images/news2.png" width="150" height="25" class="d-inline-block align-text-top"></span></div>
+                            <div class="d-flex flex-row flex-grow-1 flex-fill justify-content-center py-2 text-white px-1 news"><span class="d-flex align-items-center"><img src="../static/images/news3.PNG" width="150" height="25" class="d-inline-block align-text-top"></span></div>
                             <marquee class="news-scroll" behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"> {% for headline in news.Headline %} <a>{{ headline }} </a> <span class="dot"></span>{% endfor %} </marquee>
                             <p class="scrape-button"><a class="btn btn-sm" href="../scrape" role="button"><b>Get Latest Headlines</b></a></p>
                         </div>
