--- a/templates/news.html
+++ b/templates/news.html
@@ -46,6 +46,11 @@
             </div>
           </nav> <!-- End of Navbar -->
 
+          
+        <div class="loader-wrapper">
+          <span class="loader"><span class="loader-inner"></span></span>
+        </div>
+
           <!-- Start of dashboard section. This is the right hand side of the grid.-->
           <div class="container">
             <div class="row">
