--- a/templates/news.html
+++ b/templates/news.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Bootstrap CSS -->
-        <!-- Note: The 'superhero' bootswatch theme has been used-->
+        <!-- Note: The 'flatly' bootswatch theme has been used-->
         <link href="../static/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="../static/style.css" rel="stylesheet" type="text/css">
 
