--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-1">
             <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="../static/images/police.svg" width="32" height="30" class="d-inline-block align-text-top"> &nbsp VIC Crime </a>
+              <a class="navbar-brand" href=""><img src="../static/images/police.svg" width="32" height="30" class="d-inline-block align-text-top"> &nbsp VIC Crime </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
